@@ -162,6 +162,7 @@ aur             -- Search aur.archlinux.org for PKGBUILDS
 austlii         -- Search Australian Law docs (www.austlii.edu.au)
 bing            -- Search the web using Microsoft's Bing (www.bing.com)
 bbcnews         -- Search BBC News (news.bbc.co.uk)
+bookfinder      -- Search for books (www.bookfinder.com)
 bugmenot        -- Bypass compulsory Web registration (www.bugmenot.com)
 cddb            -- Search for cd track listings in CDDB (www.gracenote.com)
 cia             -- Search CIA documents at www.cia.gov
