@@ -1,6 +1,7 @@
 2010-02-15  James Rowe  <jnrowe@gmail.com>
 
 	* elvi/imdb: Fixes for upstream search changes.  Thanks to Sadako.
+	* New elvi: bookfinder, thanks to Ivy Foster.
 
 2010-02-14  James Rowe  <jnrowe@gmail.com>
 
